Add analysis of windowing experiments

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -194,7 +194,8 @@
    "outputs": [],
    "source": [
     "#exp_name = '2021_02_09_wall_tukey'; \n",
-    "exp_name = '2021_02_09_wall'; \n",
+    "#exp_name = '2021_02_09_wall'; \n",
+    "exp_name = '2021_02_19_windows'; \n",
     "#exp_name = '2020_12_9_rotating'; \n",
     "#exp_name = '2020_11_26_wall'; \n",
     "#fname = f'results/{exp_name}_real.pkl'\n",
@@ -232,73 +233,85 @@
     "from bin_selection import generate_sweep\n",
     "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
     "\n",
-    "distance = 10\n",
+    "\n",
+    "distance = 20\n",
     "degree = 0\n",
     "#motors = 0 #\"all45000\"\n",
     "\n",
     "chosen_dicts = [{\"degree\": degree, \"distance\":distance}]\n",
-    "df_mic_types = filter_by_dicts(df_all, chosen_dicts)\n",
-    "print('plotting\\n', df_mic_types.iloc[:, :8])\n",
+    "df_filtered = filter_by_dicts(df_all, chosen_dicts)\n",
+    "print('plotting\\n', df_filtered.iloc[:, :8])\n",
     "\n",
     "fig_bins, ax_bins = plt.subplots()\n",
     "\n",
-    "for j, (i_row, row) in enumerate(df_mic_types.iterrows()):\n",
-    "    if (row.mic_type == 'measurement') and (row.snr == 1): # this is no \"real snr\"\n",
-    "        continue\n",
+    "for mic_type, df_mic_types in df_filtered.groupby('mic_type'):\n",
+    "    \n",
+    "    ymin = 1e-4\n",
+    "    ymax = 3e2\n",
+    "    if mic_type == 'measurement':\n",
+    "        mic = 0\n",
+    "    else:\n",
+    "        mic = 1\n",
+    "    \n",
+    "    for j, (i_row, row) in enumerate(df_mic_types.iterrows()):\n",
+    "        if (row.mic_type == 'measurement') and (row.snr == 1): # this is no \"real snr\"\n",
+    "            continue\n",
+    "            \n",
+    "        title = f'{row.mic_type} {row.motors} {row.appendix.replace(\"_\", \"\")} mic{mic}'\n",
+    "\n",
+    "        # processing\n",
+    "        wall_detector = WallDetector(exp_name=exp_name, mic_type=row.mic_type)\n",
+    "        spec_masked_all, freqs_masked = wall_detector.fill_from_row(row)\n",
+    "        wall_detector.remove_bad_freqs(verbose=False, dryrun=False)\n",
+    "        wall_detector.remove_spurious_freqs(verbose=False)\n",
+    "\n",
+    "        # plotting\n",
+    "        spec_masked = np.mean(spec_masked_all, axis=1)\n",
+    "        fig, ax = plt.subplots()\n",
+    "        fig.set_size_inches(5, 5)\n",
+    "        ax.pcolorfast(row.seconds, freqs_masked, np.log10(spec_masked[:-1, :-1]))\n",
+    "        ax.set_xlim(kwargs_datasets[exp_name][row.mic_type]['min_time'],\n",
+    "                    kwargs_datasets[exp_name][row.mic_type]['max_time'])\n",
+    "        ax.set_ylim(kwargs_datasets[exp_name][row.mic_type]['min_freq'],\n",
+    "                    kwargs_datasets[exp_name][row.mic_type]['max_freq'])\n",
+    "        ax.set_xlabel('time [s]')\n",
+    "        ax.set_ylabel('frequency [Hz]')\n",
+    "        save_fig(fig, f'plots/{exp_name}_{row.mic_type}_{row.motors}{row.appendix}_spec.png')\n",
     "        \n",
-    "    # processing\n",
-    "    wall_detector = WallDetector(exp_name=exp_name, mic_type=row.mic_type)\n",
-    "    spec_masked_all, freqs_masked = wall_detector.fill_from_row(row)\n",
-    "    wall_detector.remove_bad_freqs(verbose=False, dryrun=False)\n",
-    "    wall_detector.remove_spurious_freqs(verbose=False)\n",
-    "    \n",
-    "    # plotting\n",
-    "    spec_masked = np.mean(spec_masked_all, axis=1)\n",
-    "    fig, ax = plt.subplots()\n",
-    "    fig.set_size_inches(5, 5)\n",
-    "    ax.pcolorfast(row.seconds, freqs_masked, np.log10(spec_masked[:-1, :-1]))\n",
-    "    ax.set_xlim(kwargs_datasets[exp_name][row.mic_type]['min_time'],\n",
-    "                kwargs_datasets[exp_name][row.mic_type]['max_time'])\n",
-    "    ax.set_ylim(kwargs_datasets[exp_name][row.mic_type]['min_freq'],\n",
-    "                kwargs_datasets[exp_name][row.mic_type]['max_freq'])\n",
-    "    ax.set_xlabel('time [s]')\n",
-    "    ax.set_ylabel('frequency [Hz]')\n",
-    "    #save_fig(fig, f'plots/{exp_name}_{row.mic_type}_{row.motors}_spec.png')\n",
+    "        df_mic = wall_detector.df[wall_detector.df.mic==mic]\n",
     "\n",
-    "    mic = 0 \n",
-    "    df_mic = wall_detector.df[wall_detector.df.mic==mic]\n",
-    "    \n",
-    "    fig, ax = plt.subplots()\n",
-    "    fig.set_size_inches(5, 5)\n",
-    "    sns.scatterplot(data=df_mic, \n",
-    "                    x='frequency', y='magnitude', \n",
-    "                    hue='counter', ax=ax,\n",
-    "                    linewidth=0)\n",
-    "    ax.set_xlabel('frequency [Hz]')\n",
-    "    ax.set_yscale('log')\n",
-    "    ax.set_ylim(1e-3, 1e2)\n",
-    "    ax.grid(which='both')\n",
-    "    ax.set_title(f'mic{mic}')\n",
-    "    save_fig(fig, f'plots/{exp_name}_{row.mic_type}_{row.motors}.png')\n",
-    "    \n",
-    "    freqs_psd = wall_detector.df.frequency.unique()\n",
-    "    [ax_bins.plot([f, f], [j, j+1], color=f'C{j+1}', ls='-') for f in freqs_psd]\n",
-    "    \n",
-    "    label = f'{row.mic_type}, motors={row.motors}, snr={row.snr}'\n",
-    "    ax_bins.plot([], [], color=f'C{j+1}', ls='-', label=label)\n",
-    "    \n",
-    "    fig, ax = plot_raw_signals(spec_masked_all, freqs_masked, mic_idx=mic)\n",
-    "    ax.set_title(f'{exp_name} {row.mic_type}')\n",
-    "    save_fig(fig, f'plots/{exp_name}_{row.mic_type}_{row.motors}_raw.png')\n",
+    "        fig, ax = plt.subplots()\n",
+    "        fig.set_size_inches(5, 5)\n",
+    "        sns.scatterplot(data=df_mic, \n",
+    "                        x='frequency', y='magnitude', \n",
+    "                        hue='counter', ax=ax,\n",
+    "                        linewidth=0)\n",
+    "        ax.set_xlabel('frequency [Hz]')\n",
+    "        ax.set_yscale('log')\n",
+    "        ax.set_ylim(1e-1, 1e2)\n",
+    "        ax.grid(which='both')\n",
+    "        ax.set_title(title)\n",
+    "        save_fig(fig, f'plots/{exp_name}_{row.mic_type}_{row.motors}{row.appendix}.png')\n",
     "\n",
-    "bins, t_sec = generate_sweep('sweep')\n",
-    "freqs_sweep = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
-    "[ax_bins.plot([f, f], [0, j+1], color=f'C0', ls='-') for f in freqs_sweep[bins]]\n",
-    "ax_bins.plot([], [], color=f'C0', ls='-', label='sweep')\n",
-    "ax_bins.set_xlabel('frequency [Hz]')\n",
-    "ax_bins.legend(loc='lower left', bbox_to_anchor=[1.0, 0.0])\n",
-    "ax_bins.set_yticks([])\n",
-    "pass"
+    "        freqs_psd = wall_detector.df.frequency.unique()\n",
+    "        [ax_bins.plot([f, f], [j, j+1], color=f'C{j+1}', ls='-') for f in freqs_psd]\n",
+    "\n",
+    "        label = f'{row.mic_type}, motors={row.motors}, snr={row.snr}'\n",
+    "        ax_bins.plot([], [], color=f'C{j+1}', ls='-', label=label)\n",
+    "\n",
+    "        fig, ax = plot_raw_signals(spec_masked_all, freqs_masked, mic_idx=mic)\n",
+    "        ax.set_ylim(ymin, ymax)\n",
+    "        ax.set_title(title)\n",
+    "        save_fig(fig, f'plots/{exp_name}_{row.mic_type}_{row.motors}{row.appendix}_raw.png')\n",
+    "\n",
+    "    bins, t_sec = generate_sweep(row.source)\n",
+    "    freqs_sweep = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
+    "    [ax_bins.plot([f, f], [0, j+1], color=f'C0', ls='-') for f in freqs_sweep[bins]]\n",
+    "    ax_bins.plot([], [], color=f'C0', ls='-', label='sweep')\n",
+    "    ax_bins.set_xlabel('frequency [Hz]')\n",
+    "    ax_bins.legend(loc='lower left', bbox_to_anchor=[1.0, 0.0])\n",
+    "    ax_bins.set_yticks([])\n",
+    "    pass"
    ]
   },
   {
