Create battery study, improve csv conversion

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -195,11 +195,13 @@
    "source": [
     "#exp_name = '2021_02_09_wall_tukey'; \n",
     "#exp_name = '2021_02_09_wall'; \n",
-    "exp_name = '2021_02_19_windows'; \n",
+    "exp_name = '2021_02_23_wall'; \n",
+    "#exp_name = '2021_02_19_windows'; \n",
     "#exp_name = '2020_12_9_rotating'; \n",
     "#exp_name = '2020_11_26_wall'; \n",
     "#fname = f'results/{exp_name}_real.pkl'\n",
     "fname = f'../experiments/{exp_name}/all_data.pkl'\n",
+    "#fname = f'../experiments/{exp_name}/battery_data.pkl' # for 2021_02_09_wall, battery study\n",
     "\n",
     "try:\n",
     "    df_all = pd.read_pickle(fname)\n",
@@ -234,11 +236,15 @@
     "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
     "\n",
     "\n",
-    "distance = 20\n",
+    "if len(df_all.distance.unique()) > 1:\n",
+    "    distance = 20\n",
+    "else:\n",
+    "    distance = df_all.iloc[0].distance\n",
     "degree = 0\n",
     "#motors = 0 #\"all45000\"\n",
     "\n",
     "chosen_dicts = [{\"degree\": degree, \"distance\":distance}]\n",
+    "\n",
     "df_filtered = filter_by_dicts(df_all, chosen_dicts)\n",
     "print('plotting\\n', df_filtered.iloc[:, :8])\n",
     "\n",
@@ -257,11 +263,15 @@
     "        if (row.mic_type == 'measurement') and (row.snr == 1): # this is no \"real snr\"\n",
     "            continue\n",
     "            \n",
-    "        title = f'{row.mic_type} {row.motors} {row.appendix.replace(\"_\", \"\")} mic{mic}'\n",
+    "        title = f'{row.mic_type} {row.motors} {row.appendix.replace(\"_\", \"\")} {row.distance} mic{mic}'\n",
     "\n",
     "        # processing\n",
     "        wall_detector = WallDetector(exp_name=exp_name, mic_type=row.mic_type)\n",
-    "        spec_masked_all, freqs_masked = wall_detector.fill_from_row(row)\n",
+    "        try:\n",
+    "            spec_masked_all, freqs_masked = wall_detector.fill_from_row(row)\n",
+    "        except:\n",
+    "            print('skipping', row)\n",
+    "            continue\n",
     "        wall_detector.remove_bad_freqs(verbose=False, dryrun=False)\n",
     "        wall_detector.remove_spurious_freqs(verbose=False)\n",
     "\n",
@@ -303,6 +313,7 @@
     "        ax.set_ylim(ymin, ymax)\n",
     "        ax.set_title(title)\n",
     "        save_fig(fig, f'plots/{exp_name}_{row.mic_type}_{row.motors}{row.appendix}_raw.png')\n",
+    "        break\n",
     "\n",
     "    bins, t_sec = generate_sweep(row.source)\n",
     "    freqs_sweep = np.fft.rfftfreq(N_BUFFER, 1/FS)\n",
@@ -341,8 +352,8 @@
     "fname = 'results/wall_analysis.pkl'\n",
     "#method = 'dryrun'\n",
     "#method = 'new'\n",
-    "#method = 'replace'\n",
-    "method = 'read'\n",
+    "method = 'replace'\n",
+    "#method = 'read'\n",
     "\n",
     "if method == 'read': \n",
     "    results_df = pd.read_pickle(fname)\n",
@@ -384,12 +395,13 @@
    "source": [
     "from pandas_utils import filter_by_dicts\n",
     "\n",
-    "mic_type = 'measurement'\n",
-    "#mic_type = 'audio_deck'\n",
+    "#mic_type = 'measurement'\n",
+    "mic_type = 'audio_deck'\n",
     "\n",
     "#exp_name = '2020_11_26_wall'; snr = 0\n",
     "#exp_name = '2021_02_09_wall_tukey'; snr = 3\n",
-    "exp_name = '2021_02_09_wall'; snr = 3\n",
+    "#exp_name = '2021_02_09_wall'; snr = 3\n",
+    "exp_name = '2021_02_23_wall'; snr = 3\n",
     "#exp_name = '2020_12_9_rotating'; snr = 1\n",
     "\n",
     "filter_dict = dict(\n",
@@ -419,8 +431,6 @@
     "from wall_detector import normalize_df_matrix\n",
     "from copy import deepcopy\n",
     "from simulation import get_df_theory\n",
-    "min_freq = 1500\n",
-    "max_freq = 4800\n",
     "\n",
     "calib_function = get_calibration_function(plot=False)\n",
     "\n",
@@ -550,6 +560,9 @@
     "from scipy.interpolate import UnivariateSpline, LSQUnivariateSpline\n",
     "from numpy.polynomial import Chebyshev, Legendre, Polynomial, Laguerre\n",
     "\n",
+    "spline_k = 2\n",
+    "spline_ext = 3\n",
+    "\n",
     "for mic_idx in range(row.df_matrix.shape[0]):\n",
     "    df_norm, values = normalize_df_matrix(df_matrix=row.df_matrix, \n",
     "                                          freqs=row.df_freq, method='calibration-online')\n",
@@ -570,8 +583,8 @@
     "    #spline = UnivariateSpline(xvalues, yvalues, k=2) \n",
     "    #plt.plot(xvalues, spline(xvalues), label='Spline', color='C5')\n",
     "\n",
-    "    knots = np.linspace(1000, 5000, 7)[1:-1]\n",
-    "    spline = LSQUnivariateSpline(xvalues, yvalues, t=knots, k=2, ext=3) \n",
+    "    knots = np.linspace(min(df_freq), max(df_freq), 7)[1:-1]\n",
+    "    spline = LSQUnivariateSpline(xvalues, yvalues, t=knots, k=spline_k, ext=spline_ext) \n",
     "    plt.plot(xvalues, spline(xvalues), label='LSQSpline', color=f'C{i+2}', marker='o')\n",
     "    [plt.axvline(k, color=f'C{i+2}') for k in knots]\n",
     "    plt.legend()\n",
@@ -585,9 +598,8 @@
    "outputs": [],
    "source": [
     "def spline_interpolation(xvalues, df_matrix):\n",
-    "    knots = np.linspace(2000, 4000, 4)\n",
-    "    k = 2\n",
-    "    ext = 3\n",
+    "    \n",
+    "    knots = np.linspace(min(df_freq), max(df_freq), 6)[1:-1]\n",
     "    calib_values = np.empty_like(df_matrix)\n",
     "    for i, dist in enumerate(row.df_dist):\n",
     "        for m in range(df_matrix.shape[0]):\n",
@@ -595,7 +607,7 @@
     "            slice_f = np.log10(df_matrix[m, :, i])\n",
     "            mask = ~np.isnan(slice_f)\n",
     "            \n",
-    "            spline = LSQUnivariateSpline(xvalues[mask], slice_f[mask], t=knots, k=k, ext=ext) \n",
+    "            spline = LSQUnivariateSpline(xvalues[mask], slice_f[mask], t=knots, k=spline_k, ext=spline_ext) \n",
     "            calib_values[m, :, i] = 10**spline(xvalues) \n",
     "    return calib_values\n",
     "\n",
@@ -700,16 +712,16 @@
     "    #plot_df_matrix(row.df_dist, row.df_freq, df_norm[i], ax=axs[0, i], min_freq=min_freq, max_freq=max_freq, vmin=1e-3, vmax=3)\n",
     "    ax, im = plot_df_matrix(row.df_dist, df_freq, df_exp, ax=axs[0, 0], \n",
     "                   min_freq=min_freq, max_freq=max_freq, vmin=min_value, vmax=max_value)\n",
-    "    add_colorbar(ax, im)\n",
+    "    add_colorbar(fig, ax, im)\n",
     "    ax, im = plot_df_matrix(row.df_dist, df_freq, df_the[:, distances_idx], ax=axs[0, 1], \n",
     "                   min_freq=min_freq, max_freq=max_freq, vmin=min_value, vmax=max_value)\n",
-    "    add_colorbar(ax, im)\n",
+    "    add_colorbar(fig, ax, im)\n",
     "    ax, im = plot_df_matrix(distances_grid, df_freq, df_the, ax=axs[0, 2], \n",
     "                   min_freq=min_freq, max_freq=max_freq, vmin=None, vmax=None)\n",
-    "    add_colorbar(ax, im)\n",
+    "    add_colorbar(fig, ax, im)\n",
     "    ax, im = plot_df_matrix(row.df_dist, df_freq, rel_error, ax=axs[0, 3], \n",
     "                   min_freq=min_freq, max_freq=max_freq, vmin=-3, vmax=np.log10(3))\n",
-    "    add_colorbar(ax, im)\n",
+    "    add_colorbar(fig, ax, im)\n",
     "    axs[0, 0].set_title(f'{normalization}, experimental')\n",
     "    axs[0, 1].set_title(f'{normalization}, theoretical')\n",
     "    axs[0, 3].set_title(f'{normalization}, log of relative error')\n",
@@ -735,16 +747,19 @@
     "axs[0, 0].set_title(row.mic_type + ' mic')\n",
     "axs[0, 1].set_title('theoretical')\n",
     "\n",
+    "min_freq = min(df_freq)\n",
+    "max_freq = max(df_freq)\n",
+    "\n",
     "fig.set_size_inches(10, 5)\n",
     "    #plot_df_matrix(row.df_dist, row.df_freq, df_norm[i], ax=axs[0, i], min_freq=min_freq, max_freq=max_freq, vmin=1e-3, vmax=3)\n",
     "ax, im = plot_df_matrix(\n",
     "    row.df_dist, df_freq, df_exp, ax=axs[0, 0], \n",
     "    min_freq=min_freq, max_freq=max_freq)\n",
-    "add_colorbar(ax, im)\n",
+    "add_colorbar(fig, ax, im)\n",
     "ax, im = plot_df_matrix(\n",
     "    row.df_dist, df_freq, df_the[:, distances_idx], ax=axs[0, 1], \n",
     "    min_freq=min_freq, max_freq=max_freq)\n",
-    "add_colorbar(ax, im)\n",
+    "add_colorbar(fig, ax, im)\n",
     "save_fig(fig, f'plots/{exp_name}_{row.mic_type}_matrices.png')"
    ]
   },
