--- a/notebooks/tex/window_study.tex
+++ b/notebooks/tex/window_study.tex
@@ -1,5 +1,20 @@
 \section{Windowing study}
 
+\begin{figure}[h]
+  \centering
+  \begin{minipage}{\textwidth}
+  \centering
+  \includegraphics[height=4.5cm]{2021_02_09_wall_measurement_all45000_spec.pdf}
+  \includegraphics[height=4.5cm]{2021_02_09_wall_measurement_all45000_newbattery_spec.pdf}
+  \includegraphics[height=4.5cm]{2021_02_09_wall_measurement_all45000_raw.pdf}
+  \includegraphics[height=4.5cm]{2021_02_09_wall_measurement_all45000.pdf}
+  \includegraphics[height=4.5cm]{2021_02_09_wall_measurement_all45000_newbattery_raw.pdf}
+  \includegraphics[height=4.5cm]{2021_02_09_wall_measurement_all45000_newbattery.pdf}
+  \end{minipage}
+  \caption{battery study}
+  \label{fig:battery-motors}
+\end{figure}
+
 \subsection{Audio deck mic}
 \begin{figure}[h]
   \centering
