Add frequency merging

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -136,6 +136,7 @@
     "                \n",
     "        wall_detector.remove_bad_freqs(verbose=False, dryrun=False)\n",
     "        wall_detector.remove_spurious_freqs(verbose=False)\n",
+    "        wall_detector.merge_close_freqs()\n",
     "\n",
     "        df_amp, distances, frequencies = wall_detector.get_df_matrix()\n",
     "        #df_std, *_ = wall_detector.get_df_matrix(method=normalized_std)\n",
@@ -274,6 +275,7 @@
     "            continue\n",
     "        wall_detector.remove_bad_freqs(verbose=False, dryrun=False)\n",
     "        wall_detector.remove_spurious_freqs(verbose=False)\n",
+    "        wall_detector.merge_close_freqs(verbose=True)\n",
     "\n",
     "        # plotting\n",
     "        spec_masked = np.mean(spec_masked_all, axis=1)\n",
@@ -693,6 +695,8 @@
    },
    "outputs": [],
    "source": [
+    "min_freq = min(df_freq)\n",
+    "max_freq = max(df_freq)\n",
     "for normalization, df in results.groupby('normalization', sort=False):\n",
     "    if normalization == 'raw':\n",
     "        continue\n",
@@ -775,8 +779,17 @@
     "distance_idx = np.where(row.df_dist == distance)[0]\n",
     "\n",
     "df_raw = results.loc[results.normalization=='raw']\n",
-    "df_exp = df_raw.loc[df_raw.data_type=='experimental'].iloc[0].matrix[plot_channel_idx]\n",
+    "\n",
     "df_the = df_raw.loc[df_raw.data_type=='theoretical'].iloc[0].matrix[plot_channel_idx]\n",
+    "\n",
+    "df_exp = df_raw.loc[df_raw.data_type == 'experimental'].iloc[0].matrix\n",
+    "df_the = df_raw.loc[df_raw.data_type=='theoretical'].iloc[0].matrix\n",
+    "print('experimental', df_exp.shape)\n",
+    "print('theoretical', df_the.shape)\n",
+    "\n",
+    "df_exp = df_exp[plot_channel_idx]\n",
+    "df_the = df_the[plot_channel_idx]\n",
+    "\n",
     "\n",
     "slice_exp = df_exp[:, distance_idx]\n",
     "slice_the = df_the[:, distances_idx][:, distance_idx]\n",
