Add fft and cost methods, remove unused code

--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -360,63 +360,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_probability_fft(f_slice, frequencies, window=None):\n",
-    "    import scipy.signal.windows\n",
-    "    \n",
-    "    f_slice_norm = f_slice - np.mean(f_slice)\n",
-    "    fft = np.abs(np.fft.rfft(f_slice_norm))\n",
-    "    if window is not None:\n",
-    "        w = scipy.signal.windows.get_window(window, len(fft))\n",
-    "        fft *= w\n",
-    "    \n",
-    "    df = np.mean(frequencies[1:] - frequencies[:-1]) \n",
-    "    distances = np.fft.rfftfreq(len(f_slice), df) * SPEED_OF_SOUND * 100\n",
-    "    prob = fft / np.sum(fft)\n",
-    "    return distances / 2, prob"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_probability_cost(f_slice, frequencies, distances, ax=None):\n",
-    "    f_slice_norm = f_slice - np.mean(f_slice)\n",
-    "    f_slice_norm /= np.std(f_slice_norm)\n",
-    "    \n",
-    "    probs = []\n",
-    "    for d in distances:\n",
-    "        f_slice_theory = get_freq_slice_theory(frequencies, d, yaw_deg=0)[mic_idx]\n",
-    "        f_slice_theory -= np.mean(f_slice_theory)\n",
-    "        f_slice_theory /= np.std(f_slice_theory)\n",
-    "        probs.append(np.exp(-np.linalg.norm(f_slice_theory-f_slice_norm)))\n",
-    "        \n",
-    "        if ax is not None:\n",
-    "            ax.plot(frequencies, f_slice_theory, color='black')\n",
-    "            \n",
-    "    if ax is not None:\n",
-    "        ax.plot(frequencies, f_slice_norm, color='green')\n",
-    "        \n",
-    "    probs /= np.sum(probs)\n",
-    "    return probs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
+    "from wall_detector import get_probability_cost, get_probability_fft\n",
     "from simulation import get_real_distance\n",
     "distance_slices = [5, 10, 20, 30, 40, 50]\n",
     "\n",
-    "window = 'hann' #('tukey', 0.2) #None\n",
+    "window = 'hann' #None #'hann' #('tukey', 0.2) #None\n",
     "max_frequency = 5000\n",
     "min_frequency = 1000\n",
     "n_freqs = 32\n",
