Add flying experiment analysis

--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -70,7 +70,8 @@
    "source": [
     "# exp_name = '2021_02_09_wall_tukey';\n",
     "# exp_name = '2021_02_09_wall';\n",
-    "exp_name = \"2021_02_23_wall\"\n",
+    "#exp_name = \"2021_02_23_wall\"\n",
+    "exp_name = \"2021_02_25_wall\"\n",
     "# exp_name = '2021_02_19_windows';\n",
     "# exp_name = '2020_12_9_rotating';\n",
     "# exp_name = '2020_11_26_wall';\n",
@@ -110,7 +111,7 @@
     "from pandas_utils import filter_by_dicts\n",
     "from plotting_tools import *\n",
     "import seaborn as sns\n",
-    "from wall_detector import WallDetector\n",
+    "from wall_detector import WallDetector, normalized_std\n",
     "\n",
     "ymin = 1e-4\n",
     "ymax = 3e2\n",
@@ -125,20 +126,23 @@
     "    \"distance\": distance, \n",
     "    #\"motors\": \"all45000\",\n",
     "    #\"mic_type\": \"measurement\"\n",
-    "    \"mic_type\": \"audio_deck\"\n",
+    "    #\"mic_type\": \"audio_deck\"\n",
     "}\n",
     "\n",
     "df_filtered = filter_by_dicts(df_all, [chosen_dict])\n",
     "print(\"plotting\\n\", df_filtered.iloc[:, :8])\n",
     "\n",
-    "fig_bins, ax_bins = plt.subplots()\n",
+    "verbose = False\n",
     "\n",
+    "fig_slice, ax_slice = plt.subplots()\n",
+    "fig_slice.set_size_inches(5, 5)\n",
+    "    \n",
     "for mic_type, df_mic_types in df_filtered.groupby(\"mic_type\"):\n",
     "    if mic_type == \"measurement\":\n",
     "        mic = 0\n",
     "    else:\n",
     "        mic = 1\n",
-    "\n",
+    "        \n",
     "    for j, (i_row, row) in enumerate(df_mic_types.iterrows()):\n",
     "        if (mic_type == \"measurement\") and (row.snr == 1):  # this is no \"real snr\"\n",
     "            continue\n",
@@ -152,9 +156,9 @@
     "        except:\n",
     "            print(\"skipping\", row)\n",
     "            continue\n",
-    "        wall_detector.merge_close_freqs(verbose=True)\n",
-    "        wall_detector.remove_spurious_freqs(verbose=True)\n",
-    "        wall_detector.remove_bad_freqs(verbose=True, dryrun=False)\n",
+    "        wall_detector.remove_bad_freqs(verbose=verbose, dryrun=False)\n",
+    "        wall_detector.merge_close_freqs(verbose=verbose)\n",
+    "        wall_detector.remove_spurious_freqs(verbose=verbose)\n",
     "\n",
     "        # plotting\n",
     "        spec_masked = np.mean(spec_masked_all, axis=1)\n",
@@ -176,24 +180,19 @@
     "        )\n",
     "\n",
     "        df_mic = wall_detector.df[wall_detector.df.mic == mic]\n",
-    "\n",
-    "        fig, ax = plt.subplots()\n",
-    "        fig.set_size_inches(5, 5)\n",
-    "        sns.scatterplot(\n",
-    "            data=df_mic, x=\"frequency\", y=\"magnitude\", hue=\"counter\", ax=ax, linewidth=0\n",
-    "        )\n",
-    "        ax.set_xlabel(\"frequency [Hz]\")\n",
-    "        ax.set_yscale(\"log\")\n",
-    "        ax.set_ylim(1e-1, 1e2)\n",
-    "        ax.grid(which=\"both\")\n",
-    "        ax.set_title(title)\n",
-    "        save_fig(fig, f\"plots/{exp_name}_{row.mic_type}_{row.motors}{row.appendix}.png\")\n",
-    "\n",
-    "        freqs_psd = wall_detector.df.frequency.unique()\n",
-    "        [ax_bins.plot([f, f], [j, j + 1], color=f\"C{j+1}\", ls=\"-\") for f in freqs_psd]\n",
-    "\n",
-    "        label = f\"{row.mic_type}, motors={row.motors}, snr={row.snr}\"\n",
-    "        ax_bins.plot([], [], color=f\"C{j+1}\", ls=\"-\", label=label)\n",
+    "        \n",
+    "        label = f\"{mic_type}, motors={row.motors}\"\n",
+    "        stds = df_mic.groupby(\"frequency\", sort=True).magnitude.apply(normalized_std).values\n",
+    "        #stds = df_mic.groupby(\"frequency\", sort=True).magnitude.apply(np.nanstd).values\n",
+    "        medians = df_mic.groupby(\"frequency\", sort=True).magnitude.apply(np.nanmedian).values\n",
+    "        stds = np.r_[[np.zeros(len(medians))], [2*stds]]\n",
+    "        ax_slice.errorbar(x=np.sort(df_mic.frequency.unique()), \n",
+    "                          y=medians, \n",
+    "                          yerr=stds, \n",
+    "                          label=label, marker='o', markersize=4.0, lw=2.0)\n",
+    "        #sns.scatterplot(\n",
+    "        #    data=df_mic, x=\"frequency\", y=\"magnitude\", hue=\"counter\", ax=ax, linewidth=0\n",
+    "        #)\n",
     "\n",
     "        fig, ax = plot_raw_signals(spec_masked_all, freqs_masked, mic_idx=mic)\n",
     "        ax.set_ylim(ymin, ymax)\n",
@@ -207,15 +206,14 @@
     "        fig, ax = plt.subplots()\n",
     "        ax.plot(frequencies, normalized_stds, marker='o')\n",
     "        ax.set_title(title)\n",
-    "\n",
-    "    bins, t_sec = generate_sweep(row.source)\n",
-    "    freqs_sweep = np.fft.rfftfreq(N_BUFFER, 1 / FS)\n",
-    "    [ax_bins.plot([f, f], [0, j + 1], color=f\"C0\", ls=\"-\") for f in freqs_sweep[bins]]\n",
-    "    ax_bins.plot([], [], color=f\"C0\", ls=\"-\", label=\"sweep\")\n",
-    "    ax_bins.set_xlabel(\"frequency [Hz]\")\n",
-    "    ax_bins.legend(loc=\"lower left\", bbox_to_anchor=[1.0, 0.0])\n",
-    "    ax_bins.set_yticks([])\n",
-    "    pass"
+    "        \n",
+    "ax_slice.set_xlabel(\"frequency [Hz]\")\n",
+    "ax_slice.set_yscale(\"log\")\n",
+    "#ax_slice.set_ylim(1e-1, 1e2)\n",
+    "ax_slice.grid(which=\"both\")\n",
+    "ax_slice.set_title(title)\n",
+    "ax_slice.legend(loc=\"upper left\", bbox_to_anchor=[1.0, 1.0])\n",
+    "save_fig(fig, f\"plots/{exp_name}{row.appendix}_slice.png\")"
    ]
   },
   {
@@ -244,7 +242,7 @@
    "source": [
     "from wall_analysis import get_df_matrices, FILTERS\n",
     "\n",
-    "exp_name = \"2021_02_23_wall\"\n",
+    "exp_name = \"2021_02_25_wall\"\n",
     "\n",
     "fname = \"results/wall_analysis.pkl\"\n",
     "# method = 'dryrun'\n",
@@ -295,7 +293,8 @@
    "source": [
     "from pandas_utils import filter_by_dicts\n",
     "\n",
-    "exp_name = \"2021_02_23_wall\"\n",
+    "#exp_name = \"2021_02_23_wall\"\n",
+    "exp_name = \"2021_02_25_wall\"\n",
     "\n",
     "# mic_type = 'measurement'\n",
     "mic_type = \"audio_deck\"\n",
@@ -705,7 +704,7 @@
     "    max_freq=max_freq,\n",
     ")\n",
     "add_colorbar(fig, ax, im)\n",
-    "save_fig(fig, f\"plots/{exp_name}_{row.mic_type}_matrices.png\")"
+    "save_fig(fig, f\"plots/{exp_name}_{row.mic_type}_{row.motors}_matrices.png\")"
    ]
   },
   {
@@ -717,11 +716,15 @@
     "# calibration plots\n",
     "\n",
     "distance = 6\n",
+    "print(row.df_dist)\n",
     "distance_idx = np.where(row.df_dist == distance)[0]\n",
+    "print(distance_idx)\n",
     "\n",
+    "print(df_freq.shape)\n",
     "df_exp = results.loc[results.normalization == \"raw\"].iloc[0].matrix[plot_channel_idx]\n",
-    "\n",
+    "print(df_exp.shape)\n",
     "slice_exp = df_exp[:, distance_idx]\n",
+    "print(slice_exp.shape)\n",
     "\n",
     "fig, axs = plt.subplots(1, 2, squeeze=False)\n",
     "fig.set_size_inches(10, 5)\n",
@@ -770,7 +773,7 @@
     "\n",
     "axs[0, 0].grid()\n",
     "axs[0, 1].grid()\n",
-    "save_fig(fig, f\"plots/{exp_name}_{row.mic_type}_calibration.png\")"
+    "save_fig(fig, f\"plots/{exp_name}_{row.mic_type}_{row.motors}_calibration.png\")"
    ]
   },
   {
@@ -784,7 +787,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -822,9 +825,13 @@
     "        slice_exp /= np.std(slice_exp)\n",
     "\n",
     "        proba_cost = get_probability_cost(\n",
-    "            slice_exp, df_freq[freq_indices], distances_grid, mic_idx=mic_idx\n",
+    "            slice_exp, df_freq[freq_indices], \n",
+    "            distances_grid, mic_idx=mic_idx\n",
     "        )\n",
-    "        distances_fft, proba_fft = get_probability_fft(slice_exp, df_freq[freq_indices])\n",
+    "        distances_fft, proba_fft = get_probability_fft(\n",
+    "            slice_exp, \n",
+    "            df_freq[freq_indices]\n",
+    "        )\n",
     "\n",
     "        # algorithm\n",
     "        d_cost_idx = np.argmax(proba_cost)\n",
