Added more plots

--- a/notebooks/FlyingAnalysis.ipynb
+++ b/notebooks/FlyingAnalysis.ipynb
@@ -34,7 +34,7 @@
     "from wall_analysis import parse_experiments\n",
     "#exp_name = '2020_12_18_stepper'; appendix = \"\"; distance = 51\n",
     "#exp_name = '2020_12_18_flying'; appendix=\"_new\"; distance = 0\n",
-    "exp_name = '2021_03_01_flying'; appendix=\"_30cm-glass\";\n",
+    "exp_name = '2021_03_01_flying';\n",
     "fname = f'../experiments/{exp_name}/all_data.pkl'\n",
     "\n",
     "try:\n",
@@ -64,6 +64,7 @@
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
+    "from plotting_tools import save_fig\n",
     "\n",
     "max_dist = 50 # cm\n",
     "for i, row in df_total.iterrows():\n",
@@ -83,7 +84,7 @@
     "    axs[0].set_ylabel('y [cm]')\n",
     "    axs[0].set_xlim(-max_dist/2, max_dist/2)\n",
     "    axs[0].set_ylim(-max_dist/2, max_dist/2)\n",
-    "    axs[0].legend(loc='lower right')\n",
+    "    axs[0].legend(loc='lower right', title='time [s]')\n",
     "\n",
     "    axs[1].plot(row.seconds, positions_cm[:, 0], label='x')\n",
     "    axs[1].plot(row.seconds, positions_cm[:, 1], label='y')\n",
@@ -99,7 +100,8 @@
     "    axs[2].set_ylim(-20, 20)\n",
     "    axs[2].legend(loc='lower right')\n",
     "\n",
-    "    plt.tight_layout()"
+    "    plt.tight_layout()\n",
+    "    save_fig(fig, f'plots/{exp_name}{row.appendix}_movement.pdf')"
    ]
   },
   {
@@ -165,32 +167,73 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from simulation import get_freq_slice_theory\n",
+    "from dataset_parameters import kwargs_datasets\n",
+    "\n",
+    "kwargs = kwargs_datasets[exp_name][\"audio_deck\"]\n",
+    "\n",
+    "distances_grid = np.arange(20, 70)\n",
+    "frequencies = np.linspace(kwargs[\"min_freq\"], kwargs[\"max_freq\"], 30)\n",
+    "\n",
+    "df_matrix_theo = np.empty((len(frequencies), len(distances_grid)))\n",
+    "for j, distance_cm in enumerate(distances_grid):\n",
+    "    slice_mics = get_freq_slice_theory(frequencies, distance_cm)\n",
+    "    df_matrix_theo[:, j] = slice_mics[mic_idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
     "from wall_detector import WallDetector, get_probability_cost, get_probability_fft\n",
+    "from frequency_analysis import get_index_matrix\n",
     "\n",
     "fig, ax_slices = plt.subplots()\n",
-    "fig.set_size_inches(10, 5)\n",
-    "fig, ax_proba_cost = plt.subplots()\n",
-    "fig.set_size_inches(10, 5)\n",
-    "fig, ax_proba_fft = plt.subplots()\n",
-    "fig.set_size_inches(10, 5)\n",
+    "fig.set_size_inches(5, 5)\n",
+    "fig_cost, ax_proba_cost = plt.subplots()\n",
+    "fig.set_size_inches(5, 5)\n",
+    "fig_fft, ax_proba_fft = plt.subplots()\n",
+    "fig.set_size_inches(5, 5)\n",
     "\n",
-    "distances_grid = np.arange(10, 60)\n",
-    "\n",
-    "for i_col, row in df_total.iterrows():\n",
+    "#appendix_plot = '-newbuzzer'\n",
+    "appendix_plot = '-paper'\n",
+    "#appendix_plot = '-nopaper'\n",
+    "i_col = 0\n",
+    "for _, row in df_total.iterrows():\n",
+    "    \n",
+    "    if not appendix_plot in row.appendix:\n",
+    "        continue\n",
+    "    \n",
+    "    label = str(f\"{row.appendix}\").replace('_', '')\n",
     "    wall_detector = WallDetector(exp_name=exp_name)\n",
     "    spec_masked, freqs_masked = wall_detector.fill_from_row(row)\n",
+    "    \n",
+    "    time_mask = (row.seconds > kwargs[\"min_time\"]) & (row.seconds < kwargs[\"max_time\"]) \n",
+    "    nominal_distance = int(row.appendix.split('cm')[0][-2:])\n",
+    "    distances_y = row.positions[time_mask, 1] * 100 + nominal_distance \n",
+    "    index_matrix = get_index_matrix(spec_masked)\n",
+    "    strongest_freqs = freqs_masked[index_matrix[0, time_mask]]\n",
+    "    \n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.pcolorfast(distances_grid, frequencies, df_matrix_theo[:-1, :-1])\n",
+    "    ax.scatter(distances_y, strongest_freqs, color='C1', s=5)\n",
+    "    ax.axvline(nominal_distance, color='C1', ls=':')\n",
+    "    ax.set_ylim(min(frequencies), max(frequencies))\n",
+    "    ax.set_title(f'DF of mic{mic_idx}, {label}')\n",
+    "    save_fig(fig, f'plots/{exp_name}{row.appendix}_df.pdf')\n",
     "    \n",
     "    spec = spec_masked[:, mic_idx, :]\n",
     "    spec[spec == 0] = np.nan\n",
     "    \n",
-    "    label = str(f\"{row.appendix}\").replace('_', '')\n",
     "    fig, ax = plt.subplots()\n",
-    "    fig.suptitle(f'spectrogram of mic{mic_idx}, appendix {row.appendix}')\n",
+    "    ax.set_title(f'spectrogram of mic{mic_idx}, {label}')\n",
     "    fig.set_size_inches(10, 5)\n",
     "    ax.pcolorfast(row.seconds, \n",
     "                  freqs_masked, spec[:-1, :-1])\n",
@@ -209,12 +252,17 @@
     "    \n",
     "    ax_proba_cost.plot(distances_grid, proba_cost, label=label, color=f'C{i_col}')\n",
     "    ax_proba_fft.plot(distances_fft, proba_fft, label=label, color=f'C{i_col}', ls=':')\n",
+    "    i_col += 1\n",
     "    \n",
     "ax_proba_fft.set_xlim(min(distances_grid), max(distances_grid))\n",
     "\n",
     "ax_slices.legend(loc='upper left')\n",
     "ax_proba_fft.legend(loc='upper left')\n",
-    "ax_proba_cost.legend(loc='upper left')"
+    "[ax.legend(loc='upper left') for ax in [ax_proba_fft, ax_proba_cost]]\n",
+    "[ax.set_ylabel('probability') for ax in [ax_proba_fft, ax_proba_cost]]\n",
+    "[ax.set_xlabel('distance [cm]') for ax in [ax_proba_fft, ax_proba_cost]]\n",
+    "\n",
+    "save_fig(fig_cost, f'plots/{exp_name}{appendix_plot}_cost.pdf')"
    ]
   },
   {
