--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -262,16 +262,16 @@
     "        #    data=df_mic, x=\"frequency\", y=\"magnitude\", hue=\"counter\", ax=ax, linewidth=0\n",
     "        #)\n",
     "\n",
-    "        fig, ax = plot_raw_signals(spec_masked_all, freqs_masked, mic_idx=mic)\n",
+    "        fig_raw, ax = plot_raw_signals(spec_masked_all, freqs_masked, mic_idx=mic)\n",
     "        ax.set_ylim(ymin, ymax)\n",
     "        ax.set_title(title)\n",
     "        save_fig(\n",
-    "            fig, f\"plots/{exp_name}_{row.mic_type}_{row.motors}{row.appendix}_raw.png\"\n",
+    "            fig_raw, f\"plots/{exp_name}_{row.mic_type}_{row.motors}{row.appendix}_raw.png\"\n",
     "        )\n",
     "        \n",
     "        normalized_stds = df_mic.groupby(\"frequency\", sort=True)[\"magnitude\"].apply(normalized_std).values\n",
     "        frequencies = np.sort(df_mic.frequency.unique())\n",
-    "        fig, ax = plt.subplots()\n",
+    "        fig_std, ax = plt.subplots()\n",
     "        ax.plot(frequencies, normalized_stds, marker='o')\n",
     "        ax.set_title(title)\n",
     "        \n",
@@ -285,7 +285,7 @@
     "ax_slice.set_title(title)\n",
     "#ax_slice.legend(loc=\"upper left\", bbox_to_anchor=[1.0, 1.0])\n",
     "ax_slice.legend()\n",
-    "save_fig(fig, f\"plots/{exp_name}{row.appendix}_slice.png\")"
+    "save_fig(fig_slice, f\"plots/{exp_name}{row.appendix}_slice.png\")"
    ]
   },
   {
@@ -364,8 +364,8 @@
    "source": [
     "from pandas_utils import filter_by_dicts\n",
     "\n",
-    "#exp_name = \"2021_02_23_wall\"\n",
-    "exp_name = \"2021_02_25_wall\"\n",
+    "exp_name = \"2021_02_23_wall\"\n",
+    "#exp_name = \"2021_02_25_wall\"\n",
     "\n",
     "# mic_type = 'measurement'\n",
     "mic_type = \"audio_deck\"\n",
@@ -612,7 +612,7 @@
     "        \"values\": values,\n",
     "    }\n",
     "    # print(key, data_type, df_norm.shape)\n",
-    "    min_value = min(min_value, abs(np.min(df_norm)))\n",
+    "    min_value = min(min_value, -abs(np.min(df_norm)))\n",
     "    max_value = max(max_value, abs(np.max(df_norm)))"
    ]
   },
@@ -620,7 +620,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -628,8 +628,8 @@
     "max_freq = max(df_freq)\n",
     "\n",
     "df_the = df_theory_pruned[plot_channel_idx, :, distances_idx].T\n",
-    "min_value = np.min(df_the)\n",
-    "max_value = 2 * np.max(df_the)\n",
+    "min_value = None\n",
+    "max_value = None\n",
     "\n",
     "for normalization, df in results.groupby(\"normalization\", sort=False):\n",
     "    df_exp = df.iloc[0].matrix[plot_channel_idx]\n",
@@ -723,7 +723,7 @@
     "\n",
     "distances = row.df_dist[row.df_dist <= max_distance]\n",
     "\n",
-    "plot_distances = [distances[1], distances[len(distances)//2], distances[-2]]\n",
+    "plot_distances = [2, 5, 10]\n",
     "\n",
     "for i_d, distance in enumerate(distances):\n",
     "\n",
@@ -754,7 +754,8 @@
     "\n",
     "        d_cost_idx = np.argmax(proba_cost)\n",
     "        d_cost = distances_grid[d_cost_idx]\n",
-    "        absolute_err_dict[\"cost\"][method].append(abs(d_cost - distance))\n",
+    "        abs_err = abs(d_cost - distance)\n",
+    "        absolute_err_dict[\"cost\"][method].append(abs_err)\n",
     "\n",
     "        ax_cost.semilogy(distances_grid, proba_cost, color=f\"C{i_method}\", label=method)\n",
     "        ax_cost.axvline(x=d_cost, color=f\"C{i_method}\")\n",
@@ -792,10 +793,10 @@
     "    ax_cost.legend(loc=\"lower right\")\n",
     "\n",
     "    if distance in plot_distances:\n",
-    "        fname_here = f'results/{fname}_{distance:.0f}_cost.png'\n",
+    "        fname_here = f'plots/{fname}_{distance:.0f}_slice.png'\n",
     "        save_fig(fig, fname_here)\n",
     "        \n",
-    "        fname_here = f'results/{fname}_{distance:.0f}_slice.png'\n",
+    "        fname_here = f'plots/{fname}_{distance:.0f}_cost.png'\n",
     "        save_fig(fig_cost, fname_here)"
    ]
   },
